--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,16 @@
 	<link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:700|Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
+	<header>
+		<nav>
+			<ul>
+				<li><a href="about.html">About Me</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="http://failureandoreos.blogspot.com/">Blog</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
+			</ul>
+		</nav>
+	</header>
 </body>
 </html>
