--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
 	<header>
 		<nav>
 			<ul>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Me</a></li>
 				<li><a href="projects.html">Projects</a></li>
 				<li><a href="http://failureandoreos.blogspot.com/">Blog</a></li>
