--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<header>
-		<h1>Hi!</h1>
-		<h2>My name is Djassi Julien.</h2>
-		<h3>I am an Aspiring Chemist, a Programmer, a Fun Lover and a Daydreamer.</h3>
+		<h1>What's up!</h1>
+		<h2>My name is Djassi Julien</h2>
+		<h3>I'm a 16 year old aspiring computer programmer</h3>
 		<h4>Feel free to explore this site to learn more about me!</h4>
 	</header>
 	<nav>
