--- a/about.html
+++ b/about.html
@@ -17,5 +17,12 @@
 			</ul>
 		</nav>
 	</header>
+	<div id="wrapper">
+		<section>
+			<img src="me.jpg" class="profile-photo">
+			<h3>About Me</h3>
+			<p>Hey, I'm Djassi! I'm 16 years old and I'm a senior at the High School for Math, Science and Engineering. I did a summer intensive called All Star Code in 2014, and now I'm working towards a carreer in computer science! So far I've learned HTML, CSS, JavaScript and now I'm learning Python. When I'm not coding, I like to play chess, ultimate frisbee and dance. Feel free to contact me if you ever want to talk or grab coffee.</p>
+		</section>
+	</div>
 </body>
 </html>
