--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Djassi Julien</title>
 	<link rel="stylesheet" href="css/djassi.css"></link>
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="animate.min.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 </head>
 <body>
