--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" href="css/projects.css"></link>
+	<link rel="stylesheet" href="animate.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:700|Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
