--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 	<header>
-		<h1>What's up!</h1>
-		<h2>My name is Djassi Julien</h2>
-		<h3>I'm a 16 year old aspiring computer programmer</h3>
-		<h4>Feel free to explore this site to learn more about me!</h4>
+		<h1 class="animate bounceInUp">What's up!</h1>
+		<h2 class="animate bounceInUp">My name is Djassi Julien</h2>
+		<h3 class="animate bounceInUp">I'm a 16 year old aspiring computer programmer</h3>
+		<h4 class="animate bounceInUp">Feel free to explore this site to learn more about me!</h4>
 	</header>
-	<nav>
+	<nav class="animate bounceInUp">
 		<ul>
 			<li><a href="about.html">About Me</a></li>
 			<li><a href="projects.html">Projects</a></li>
