--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 	<header>
-		<h1 class="animate bounceInUp">What's up!</h1>
-		<h2 class="animate bounceInUp">My name is Djassi Julien</h2>
-		<h3 class="animate bounceInUp">I'm a 16 year old aspiring computer programmer</h3>
-		<h4 class="animate bounceInUp">Feel free to explore this site to learn more about me!</h4>
+		<h1 class="animated bounceInUp">What's up!</h1>
+		<h2 class="animated bounceInUp">My name is Djassi Julien</h2>
+		<h3 class="animated bounceInUp">I'm a 16 year old aspiring computer programmer</h3>
+		<h4 class="animated bounceInUp">Feel free to explore this site to learn more about me!</h4>
 	</header>
 	<nav class="animate bounceInUp">
 		<ul>
