--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h3 class="animated bounceInUp">I'm a 16 year old aspiring computer programmer</h3>
 		<h4 class="animated bounceInUp">Feel free to explore this site to learn more about me!</h4>
 	</header>
-	<nav class="animate bounceInUp">
+	<nav class="animated bounceInUp">
 		<ul>
 			<li><a href="about.html">About Me</a></li>
 			<li><a href="projects.html">Projects</a></li>
