--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 	<header>
-		<h1 class="animated fadeInDown">What's up!</h1>
-		<h2 class="animated fadeInDown">My name is Djassi Julien</h2>
-		<h3 class="animated fadeInDown">I'm a 16 year old aspiring computer programmer</h3>
-		<h4 class="animated fadeInDown">Feel free to explore this site to learn more about me!</h4>
+		<h1 class="animated zoomInDown">What's up!</h1>
+		<h2 class="animated zoomInDown">My name is Djassi Julien</h2>
+		<h3 class="animated zoomInDown">I'm a 16 year old aspiring computer programmer</h3>
+		<h4 class="animated zoomInDown">Feel free to explore this site to learn more about me!</h4>
 	</header>
-	<nav class="animated fadeInDown">
+	<nav class="animated zoomInDown">
 		<ul>
 			<li><a href="about.html">About Me</a></li>
 			<li><a href="projects.html">Projects</a></li>
