--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h3 class="animated zoomInDown">I'm a 16 year old aspiring computer programmer</h3>
 		<h4 class="animated zoomInDown">Feel free to explore this site to learn more about me!</h4>
 	</header>
-	<nav class="animated zoomInDown">
+	<nav class="animated zoomInDown" id="nav">
 		<ul>
 			<li><a href="about.html">About Me</a></li>
 			<li><a href="projects.html">Projects</a></li>
