--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 		<section>
 			<img id="pic" width="1000" alt="me" src="https://cloud.githubusercontent.com/assets/8428015/8749653/ff035880-2c70-11e5-83ff-5cf2ce3ca789.png">
 			<h3 id="hey">Hey!</h3>
-			<p id="description">I'm Djassi! I'm 16 years old and I'm a senior at the High School for Math, Science and Engineering. I did a summer intensive called All Star Code in 2014, and now I'm working towards a carreer in computer science! So far I've learned HTML, CSS, JavaScript and now I'm learning Python. When I'm not coding, I like to play chess, ultimate frisbee, dance, and of course hang out with my friends. Feel free to contact me if you ever want to <a href="contact.html">talk or grab coffee</a>.</p>
+			<p id="description">I'm Djassi! I'm 16 years old and I'm a senior at the High School for Math, Science and Engineering. I did a summer intensive called All Star Code in 2014, and now I'm working towards a carreer in computer science! So far I've learned HTML, CSS, JavaScript and now I'm learning Python. When I'm not coding, I like to play chess, ultimate frisbee, dance, and of course hang out with my friends. Feel free to contact me if you ever want to <a href="contact.html" id="contact">talk or grab coffee</a>.</p>
 		</section>
 	</div>
 </body>
