--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/animate.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script src="js/djassi.js"></script>
 </head>
 <body>
 	<header>
@@ -24,7 +23,7 @@
 		</ul>
 	</nav>
 	<footer>
-		
+		<p class="animated zoomInDown">&copy; 2015 Djassi Julien.</p>
 	</footer>
 
 	<script src="js/djassi.js</script"></script>
