--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Djassi Julien</title>
+	<title>Djassi Julien - Home</title>
 	<link rel="stylesheet" href="css/djassi.css"></link>
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/animate.css">
