--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title></title>
+	<title>Djassi Julien - About Me</title>
 	<link rel="stylesheet" href="css/about.css"></link>
 	<link rel="stylesheet" href="css/animate.css">
 	<link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:700|Varela+Round' rel='stylesheet' type='text/css'>
