--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title></title>
+	<title>Djassi Julien - Gallery</title>
 	<link rel="stylesheet" href="css/gallery.css"></link>
 	<link rel="stylesheet" href="animate.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:700|Varela+Round' rel='stylesheet' type='text/css'>
