--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</ul>
 	</nav>
 	<footer>
-		<p class="animated zoomInDown">&copy; 2015 Djassi Julien</p>
+		<p>&copy; 2015 Djassi Julien</p>
 	</footer>
 
 	<script src="js/djassi.js</script"></script>
