--- a/about.html
+++ b/about.html
@@ -25,5 +25,8 @@
 			<p id="description" class="animated zoomInDown">I'm Djassi! I'm 16 years old and I'm a senior at the High School for Math, Science and Engineering. I did a summer intensive called All Star Code in 2014, and now I'm working towards a carreer in computer science! So far I've learned HTML, CSS, JavaScript and now I'm learning Python. When I'm not coding, I like to play chess, ultimate frisbee, dance, and of course hang out with my friends. Feel free to <a href="contact.html" id="contact">contact me</a> if you ever want to talk or grab coffee.</p>
 		</section>
 	</div>
+	<footer>
+		<p>&copy; 2015 Djassi Julien</p>
+	</footer>
 </body>
 </html>
