--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 	<title>Djassi Julien - About Me</title>
 	<link rel="stylesheet" href="css/about.css"></link>
 	<link rel="stylesheet" href="css/animate.css">
+	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:700|Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
