--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 	<title>Djassi Julien - Contact Me</title>
 	<link rel="stylesheet" href="css/contact.css"></link>
 	<link rel="stylesheet" href="animate.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:700|Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
