--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,14 @@
 			</ul>
 		</nav>
 	</header>
+	<li>
+		<p>Phone: (917)428-7534</p>
+		<p>Email: djassij@gmail.com</p>
+		<p>LinkedIn: <a href:"https://www.linkedin.com/pub/djassi-julien/79/5b9/915">Djassi Julien</a></p>
+		<p>Instagram: <a href:"http://instagram.com/duhjasee/">@duhjasee</a></p>
+		<p>Twitter: <a href:"http://twitter.com/DjazzyDjassi">@DjazzyDjassi</a></p>
+		<p>Snapchat: @dj_julien</p>
+	</li>
 	<footer>
 		<p>&copy; 2015 Djassi Julien</p>
 	</footer>
