--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
 			</ul>
 		</nav>
 	</header>
+	<p>Contact Information and Social Media</p>
 	<li>
 		<p>Phone: (917)428-7534</p>
 		<p>Email: djassij@gmail.com</p>
