--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
 			</ul>
 		</nav>
 	</header>
-	<p>Contact Information and Social Media</p>
-	<li>
+	<p id="contact_title">Contact Information and Social Media</p>
+	<li id="contact_info">
 		<p>Phone: (917)428-7534</p>
 		<p>Email: djassij@gmail.com</p>
 		<p>LinkedIn: <a href:"https://www.linkedin.com/pub/djassi-julien/79/5b9/915">Djassi Julien</a></p>
