--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
 	<li id="contact_info">
 		<p>Phone: (917)428-7534</p>
 		<p> Email: djassij@gmail.com</p>
-		<p id="link">LinkedIn: <a href:"https://www.linkedin.com/pub/djassi-julien/79/5b9/915">Djassi Julien</a></p>
-		<p id="link">Instagram: <a href:"http://instagram.com/duhjasee/">@duhjasee</a></p>
-		<p id="link"> Twitter: <a href:"http://twitter.com/DjazzyDjassi">@DjazzyDjassi</a></p>
+		<p>LinkedIn: <a id="link" href:"https://www.linkedin.com/pub/djassi-julien/79/5b9/915">Djassi Julien</a></p>
+		<p>Instagram: <a id="link" href:"http://instagram.com/duhjasee/">@duhjasee</a></p>
+		<p> Twitter: <a id="link" href:"http://twitter.com/DjazzyDjassi">@DjazzyDjassi</a></p>
 		<p>Snapchat: @dj_julien</p>
 	</li>
 	<footer>
