--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
 	<div id="wrapper">
 		<section>
 			<img id="pic" width="925" alt="me" src="https://cloud.githubusercontent.com/assets/8428015/8749653/ff035880-2c70-11e5-83ff-5cf2ce3ca789.png">
-			<h3 id="hey" class="animated zoomIn">Hey!</h3>
-			<p id="description" class="animated zoomIn">I'm Djassi! I'm 16 years old and I'm a senior at the High School for Math, Science and Engineering. I did a summer intensive called All Star Code in 2014, and now I'm working towards a carreer in computer science! So far I've learned HTML, CSS, JavaScript and now I'm learning Python. When I'm not coding, I like to play chess, ultimate frisbee, dance, and of course hang out with my friends. Feel free to <a href="contact.html" id="contact">contact me</a> if you ever want to talk or grab coffee.</p>
+			<h3 id="hey" class="animated zoomInUp">Hey!</h3>
+			<p id="description" class="animated zoomInUp">I'm Djassi! I'm 16 years old and I'm a senior at the High School for Math, Science and Engineering. I did a summer intensive called All Star Code in 2014, and now I'm working towards a carreer in computer science! So far I've learned HTML, CSS, JavaScript and now I'm learning Python. When I'm not coding, I like to play chess, ultimate frisbee, dance, and of course hang out with my friends. Feel free to <a href="contact.html" id="contact">contact me</a> if you ever want to talk or grab coffee.</p>
 		</section>
 	</div>
 	<footer>
