--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 		</nav>
 	</header>
 	<p id="contact_title">Contact Information and Social Media</p>
-	<li id="contact_info" class="animated zoomInUp">
+	<li id="contact_info" class="animated zoomIn">
 		<p>Phone: (917)428-7534</p>
 		<p>Email: djassij@gmail.com</p>
 		<p>LinkedIn: <a href="https://www.linkedin.com/pub/djassi-julien/79/5b9/915" id="link">Djassi Julien</a></p>
