--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<ul>
 			<li><a href="about.html">About Me</a></li>
 			<li><a href="projects.html">Projects</a></li>
-			<li><a href="http://failureandoreos.blogspot.com/">Blog</a></li>
+			<li>Blog</li>
 			<li><a href="gallery.html">Gallery</a></li>
 			<li><a href="contact.html">Contact Me</a></li>
 		</ul>
