--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<link rel="stylesheet" href="css/djassi.css"></link>
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/animate.css">
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	<script type="text/javascript" src="js/djassi.js</script"></script>
 </head>
 <body>
 	<header>
@@ -25,7 +26,5 @@
 	<footer>
 		<p>&copy; 2015 Djassi Julien</p>
 	</footer>
-
-	<script src="js/djassi.js</script"></script>
 </body>
 </html>
