--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,34 @@
 			</ul>
 		</nav>
 	</header>
+	<section>
+		<ul id="gallery">
+			<li>
+				<img src="">
+				<p></p>
+			</li>
+			<li>
+				<img src="">
+				<p></p>
+			</li>
+			<li>
+				<img src="">
+				<p></p>
+			</li>
+			<li>
+				<img src="">
+				<p></p>
+			</li>
+			<li>
+				<img src="">
+				<p></p>
+			</li>
+			<li>
+				<img src="">
+				<p></p>
+			</li>
+		</ul>
+	</section>
 	<footer>
 		<p>&copy; 2015 Djassi Julien</p>
 	</footer>
