--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
 	<section>
 		<ul id="gallery">
 			<li>
-				<img src="">
+				<img width="640" alt="squad1" src="https://cloud.githubusercontent.com/assets/8428015/8776776/983f8f9e-2ec1-11e5-844d-9fe47169345f.png">
 				<p></p>
 			</li>
 			<li>
