--- a/gallery.html
+++ b/gallery.html
@@ -23,27 +23,27 @@
 		<ul id="gallery">
 			<li>
 				<img width="640" alt="squad1" src="https://cloud.githubusercontent.com/assets/8428015/8776776/983f8f9e-2ec1-11e5-844d-9fe47169345f.png">
-				<p></p>
+				<p>My friends and I on the last day of school in SoHo</p>
 			</li>
 			<li>
-				<img src="">
-				<p></p>
+				<img width="476" alt="squad4" src="https://cloud.githubusercontent.com/assets/8428015/8776813/e410c7f8-2ec1-11e5-93fe-3edc7781b757.png">
+				<p>My halloween costume (I was a stick figure)</p>
 			</li>
 			<li>
-				<img src="">
-				<p></p>
+				<img width="638" alt="squad2" src="https://cloud.githubusercontent.com/assets/8428015/8776793/b47b0d46-2ec1-11e5-8567-31a7077112aa.png">
+				<p>My friends and I watching our school's softball team</p>
 			</li>
 			<li>
-				<img src="">
-				<p></p>
+				<img width="640" alt="squad3" src="https://cloud.githubusercontent.com/assets/8428015/8776809/d8892a24-2ec1-11e5-82f4-15fdc765d19a.png">
+				<p>My friends and I by the Hudson River</p>
 			</li>
 			<li>
-				<img src="">
-				<p></p>
+				<img width="667" alt="squad5" src="https://cloud.githubusercontent.com/assets/8428015/8776819/edb1bf88-2ec1-11e5-813b-f794865b175c.png">
+				<p>Me at the Harvard Club on the last day of All Star Code</p>
 			</li>
 			<li>
-				<img src="">
-				<p></p>
+				<img width="830" alt="squad6" src="https://cloud.githubusercontent.com/assets/8428015/8776823/f90473ee-2ec1-11e5-8fab-244dfa668cd2.png">
+				<p>My friends and I at my school's annual Intergrade Olympics</p>
 			</li>
 		</ul>
 	</section>
