--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Djassi Julien - Gallery</title>
 	<link rel="stylesheet" href="css/gallery.css"></link>
-	<link rel="stylesheet" href="animate.min.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:700|Varela+Round' rel='stylesheet' type='text/css'>
 </head>
