--- a/gallery.html
+++ b/gallery.html
@@ -21,27 +21,27 @@
 	</header>
 	<section>
 		<ul id="gallery">
-			<li>
+			<li id="left">
 				<img width="500" alt="squad1" src="https://cloud.githubusercontent.com/assets/8428015/8776776/983f8f9e-2ec1-11e5-844d-9fe47169345f.png">
 				<p>My friends and I on the last day of school in SoHo</p>
 			</li>
-			<li>
+			<li id="right">
 				<img width="372" alt="squad4" src="https://cloud.githubusercontent.com/assets/8428015/8776813/e410c7f8-2ec1-11e5-93fe-3edc7781b757.png">
 				<p>My halloween costume (I was a stick figure)</p>
 			</li>
-			<li>
+			<li id="left">
 				<img width="550" alt="squad2" src="https://cloud.githubusercontent.com/assets/8428015/8776793/b47b0d46-2ec1-11e5-8567-31a7077112aa.png">
 				<p>My friends and I watching our school's softball team</p>
 			</li>
-			<li>
+			<li id="right">
 				<img width="543" alt="squad3" src="https://cloud.githubusercontent.com/assets/8428015/8776809/d8892a24-2ec1-11e5-82f4-15fdc765d19a.png">
 				<p>My friends and I by the Hudson River</p>
 			</li>
-			<li>
+			<li id="left">
 				<img width="500" alt="squad5" src="https://cloud.githubusercontent.com/assets/8428015/8776819/edb1bf88-2ec1-11e5-813b-f794865b175c.png">
 				<p>Me at the Harvard Club on the last day of All Star Code</p>
 			</li>
-			<li>
+			<li id="right">
 				<img width="530" alt="squad6" src="https://cloud.githubusercontent.com/assets/8428015/8776823/f90473ee-2ec1-11e5-8fab-244dfa668cd2.png">
 				<p>My friends and I at my school's annual Intergrade Olympics</p>
 			</li>
