--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
 		</nav>
 	</header>
 	<section>
-		<ul id="gallery">
+		<ul id="gallery" class="animated zoomInLeft">
 			<li id="left">
 				<img width="500" alt="squad1" src="https://cloud.githubusercontent.com/assets/8428015/8776776/983f8f9e-2ec1-11e5-844d-9fe47169345f.png">
 				<p>My friends and I on the last day of school in SoHo</p>
