--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,15 @@
 			</ul>
 		</nav>
 	</header>
+	<ul>
+		<li>
+			<a href="http://djassij.github.io/BlackJack">
+				<img width="618" alt="screen shot 2015-07-20 at 12 17 39 pm" src="https://cloud.githubusercontent.com/assets/8428015/8780848/be0cc012-2ed9-11e5-99f4-d8b3f57c88ee.png">
+			</a>
+			<p>All Star BlackJack</p>
+			<p>My partner, Dessi Gando, and I built a website where you can play a basic version of BlackJack online. We used HTML, CSS, Javascript and JQuery to build it and we deployed it to github.</p>
+		</li>
+	</ul>
 	<footer>
 		<p>&copy; 2015 Djassi Julien</p>
 	</footer>
