--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 		</nav>
 	</header>
 	<section>
-		<ul class="animated zoomInLeft">
+		<ul class="animated zoomInRight">
 			<li>
 				<a href="http://djassij.github.io/BlackJack">
 					<img width="400" alt="screen shot 2015-07-20 at 12 17 39 pm" src="https://cloud.githubusercontent.com/assets/8428015/8780848/be0cc012-2ed9-11e5-99f4-d8b3f57c88ee.png">
