--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,9 @@
 				<a href="http://djassij.github.io/BlackJack">
 					<img width="400" alt="screen shot 2015-07-20 at 12 17 39 pm" src="https://cloud.githubusercontent.com/assets/8428015/8780848/be0cc012-2ed9-11e5-99f4-d8b3f57c88ee.png">
 				</a>
-				<p id="title">All Star BlackJack</p>
+				<a href="http://djassij.github.io/BlackJack">
+					<p id="title">All Star BlackJack</p>
+				</a>
 				<p id="description">My partner, Dessi Gando, and I built a website where you can play a basic version of BlackJack online.</p>
 				<p id="description">We used HTML, CSS, Javascript and JQuery to build it and we deployed it to github.</p>
 			</li>
