--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<ul>
 			<li><a href="about.html">About Me</a></li>
 			<li><a href="projects.html">Projects</a></li>
-			<li>Blog</li>
+			<li><a href="http://djassijulien.wordpress.com">Blog</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
 			<li><a href="contact.html">Contact Me</a></li>
 		</ul>
