--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Me</a></li>
 				<li><a href="projects.html">Projects</a></li>
-				<li>Blog</li>
+				<li><a href="http://djassijulien.wordpress.com">Blog</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
