--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Djassi Julien - Home</title>
+	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
 	<link rel="stylesheet" href="css/djassi.css"></link>
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/animate.css">
