--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Djassi Julien - Home</title>
-	<link rel="icon" href="https://cloud.githubusercontent.com/assets/8428015/8832580/ea2b653c-3077-11e5-9e43-c067b067c23a.png" sizes="32x32">
+	<link rel="icon" href="https://cloud.githubusercontent.com/assets/8428015/8832580/ea2b653c-3077-11e5-9e43-c067b067c23a.png" sizes="32x32"></link>
 	<link rel="stylesheet" href="css/djassi.css"></link>
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/animate.css">
